ZumZumFinancials_Dev1/src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Activity_End__c</fullName>
        <defaultValue>today()+365</defaultValue>
        <description>Expected activity end date, may post date eligibility end date</description>
        <inlineHelpText>Enter the expected activity end date, may post date eligibility end date</inlineHelpText>
        <label>Activity End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Activity_Start__c</fullName>
        <defaultValue>today()</defaultValue>
        <description>Expected activity start date, may pre-date eligibility start date</description>
        <inlineHelpText>Enter the expected activity start date, may pre-date eligibility start date</inlineHelpText>
        <label>Activity Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <picklist>
            <picklistValues>
                <fullName>Accountshop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fire Groups</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forstart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ignite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RDI Associates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RDI Unbranded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Timber Transport</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Woodfuel Producer Groups</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workforce Development</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Budget_Holder__c</fullName>
        <description>Budget holder for this project</description>
        <inlineHelpText>Please enter the budget holder for this project</inlineHelpText>
        <label>Budget Holder</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Project</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Charge_Rate__c</fullName>
        <description>The type of charge rate to be used on this project/opportunity - Agreed Daily Rate, Basic Daily Rate, Fixed Price Rate (ie fixed price for whole project irrespective of time spent), No Charge Rate, Precise Hourly Rate (plus management charge)</description>
        <inlineHelpText>Enter the type of charge rate to be used on this project/opportunity - Agreed Daily Rate, Basic Daily Rate, Fixed Price Rate (ie fixed price for whole project irrespective of time spent), No Charge Rate, Precise Hourly Rate (plus management charge)</inlineHelpText>
        <label>Charge Rate</label>
        <picklist>
            <picklistValues>
                <fullName>ADR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BDR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FPR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NCR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PHR</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Claimable__c</fullName>
        <description>% Claimable from main funder</description>
        <inlineHelpText>Enter the % Claimable from main funder</inlineHelpText>
        <label>Claimable</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Code_Numeric__c</fullName>
        <formula>VALUE( Code__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Code Numeric</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <description>Project code</description>
        <inlineHelpText>Enter a project code once activity has started on this opportunity/project</inlineHelpText>
        <label>Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrentGenerators__c</fullName>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeliveryInstallationStatus__c</fullName>
        <label>Delivery/Installation Status</label>
        <picklist>
            <picklistValues>
                <fullName>In progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yet to begin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dept__c</fullName>
        <description>Office/area/function project is run from, not necessarily the area the project covers</description>
        <inlineHelpText>Please enter the office/area/function project is run from, not necessarily the area the project covers; GV-Governance,HO-Head Office,MK-Marketing,NW-Northwoods,QE-Quality/Environmental,SC-Scotland,YW-Yorwoods</inlineHelpText>
        <label>Dept</label>
        <picklist>
            <picklistValues>
                <fullName>GV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>YW</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>A brief description of the project/opportunity</description>
        <inlineHelpText>Enter a brief description of the project/opportunity</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Eligibility_End__c</fullName>
        <description>Expected eligibility end date i.e. the date that project expenditure can be claimed to</description>
        <inlineHelpText>Enter the expected eligibility end date i.e. the date that project expenditure can be claimed to</inlineHelpText>
        <label>Eligibility End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Eligibility_Start__c</fullName>
        <description>Expected eligibility start date i.e. the date that project expenditure can be claimed from</description>
        <inlineHelpText>Enter the expected eligibility start date i.e. the date that project expenditure can be claimed from</inlineHelpText>
        <label>Eligibility Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Contribution__c</fullName>
        <description>Estimated contribution i.e. estimated turover less expected external costs and any incremental staff costs</description>
        <inlineHelpText>Enter the estimated contribution i.e. estimated turover less expected external costs and any incremental staff costs, use the contrbution calculator if necessary</inlineHelpText>
        <label>Estimated Contribution</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Format__c</fullName>
        <description>The format of the opportunity/project funding</description>
        <inlineHelpText>Enter the format of the opportunity/project funding</inlineHelpText>
        <label>Format</label>
        <picklist>
            <picklistValues>
                <fullName>Funding Application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partnership Project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quotation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tender</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unfunded</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_Chargable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Chargable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lost_To__c</fullName>
        <description>The organisation this opportunity was lost to, if applicable</description>
        <inlineHelpText>Enter the organisation this opportunity was lost to, if applicable</inlineHelpText>
        <label>Lost To</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities Lost</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MainCompetitors__c</fullName>
        <label>Main Competitor(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderNumber__c</fullName>
        <label>Order Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Year_Start__c</fullName>
        <description>The financial year start of multi year projects</description>
        <inlineHelpText>Enter the financial year start of multi year projects</inlineHelpText>
        <label>Project Year Start</label>
        <picklist>
            <picklistValues>
                <fullName>Jan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feb</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>May</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jun</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jul</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aug</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nov</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dec</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reason_s_Lost__c</fullName>
        <description>Reason(s) opportunity was lost</description>
        <inlineHelpText>If applicable, select the reason(s) the opportunity was lost</inlineHelpText>
        <label>Reason(s) Lost</label>
        <picklist>
            <controllingField>StageName</controllingField>
            <picklistValues>
                <fullName>Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project did not proceed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quality - capacity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quality - methodology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quality - relevant experience</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Sub_Project__c</fullName>
        <label>Project</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Sub Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TrackingNumber__c</fullName>
        <label>Tracking Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Private</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.PRIVATE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Private</label>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
</CustomObject>